--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,800;1,400&display=swap');
+
+:root {
+    --pri-color: #459C3D;
+    --sec-color: #AACA47;
+    --ter-color: #1E3279;
+    --qua-color: #0152A1;
+    --qui-color: #49A7CD;
+    --ser-color: #A0A1A5;
+    --white: #fff;
+    --black: #000;
+}
+
 * {
     box-sizing: border-box;
-    /* font-family: ; */
+    font-family: 'Poppins', sans-serif;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
 }
+
 header {
-    min-height: 500px;
+    min-height: 50vh;
     background-image: url(/assets/imgs/main-bg2.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
+    color: var(--sec-color);
+}
+
+header .bg-gradient {
+    min-height: 100px;
+    width: 100%;
+    display: flex;
+    border-bottom: var(--pri-color) 1px solid;
+    background: linear-gradient(to bottom, rgba(0,0,0,.65) 0%, rgba(0,0,0,0) 100%);
+}
+
+header #logo {
+    width: 200px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 800;
+    padding: 20px;
+    text-shadow: var(--pri-color) 1px 1px 8px;
+}
+
+header #menu {
+    flex: 1;
+}
+
+header #menu ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    padding: 0;
+}
+
+header #menu li {
+    min-width: 50px;
+    line-height: 60px;
+}
+
+header #menu a {
+    color: var(--sec-color);
+    text-decoration: none;
+    font-weight: 500;
+    padding: 20px;
 }
